add real timestamp to solve import in past, calculate correctly delay and introduce gps ago, added map button
